<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>

    <TextView
        android:id="@+id/login_txt"
        style="@style/ElBigTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/login_txt"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/login_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/editTextbckColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/editTextbckColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_defualt"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_login_password" />

    <TextView
        android:id="@+id/login_forgot_pwd_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_txt"
        style="@style/ElNormalColoredText"
        android:layout_marginTop="@dimen/margin_default_double"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/view1_width"
        android:layout_height="@dimen/horizontal_line"
        android:layout_marginStart="@dimen/margin_defualt"
        android:layout_marginTop="12dp"
        android:background="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/dont_have_account_txt" />

    <TextView
        android:id="@+id/dont_have_account_txt"
        style="@style/ElNormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_question"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/margin_defualt"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_pwd_txt" />
    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/view1_width"
        android:layout_height="@dimen/horizontal_line"
        android:layout_marginStart="@dimen/margin_defualt"
        android:layout_marginTop="12dp"
        android:background="@color/secondaryDarkColor"
        android:layout_marginEnd="@dimen/margin_defualt"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@+id/dont_have_account_txt" />

    <TextView
        android:id="@+id/register_txt"
        style="@style/ElNormalColoredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_txt"
        android:layout_marginTop="@dimen/margin_defualt"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/dont_have_account_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>