<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>

    <TextView
        android:id="@+id/register_text"
        style="@style/ElBigTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/register_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/editTextbckColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_register_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/editTextbckColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_email_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email_verify"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_reg_email_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/editTextbckColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_email_verify">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/editTextbckColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_repeat"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_reg_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/editTextbckColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_birthdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_birthdate"
        android:layout_marginTop="@dimen/margin_defualt"
        style="@style/ElEditTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_reg_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:maxLines="1"
            android:backgroundTint="@color/editTextbckColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_defualt"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_birthdate" />

</androidx.constraintlayout.widget.ConstraintLayout>